Fix Header icon alignment in mobile
Fix alignment of icons in mobile
Adjust the padding of the navbar on mobile
Fix styling of the jumbotron heading font weight

--- a/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/_header.scss
+++ b/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/_header.scss
@@ -165,11 +165,6 @@
             .navbar-expand .navbar-nav .nav-link {
                 padding-right: 0
             }
-
-            .navbar-nav > li > div > a {
-                padding-top: $spacer;
-                padding-bottom: $spacer;
-            }
         }
     }
 
