--- a/src/Orckestra.Composer.Website/UI.Package/Sass/Overrides/_jumbotron.scss
+++ b/src/Orckestra.Composer.Website/UI.Package/Sass/Overrides/_jumbotron.scss
@@ -15,7 +15,7 @@
         top: 10px;
         left: 30px;
         right: 30px;
-        font-weight: bold;
+        font-weight: 400;
         font-size: 10vw;
 
         @include media-breakpoint-up(sm) {
